--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
     <meta property="og:locale"             content="zh_TW">
     <title>We Studio</title>
     <link rel="shortcut icon" href="./images/logo-header.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style/reset.css" type="image/x-icon">
+    <link rel="stylesheet" href="./style/all.css" >
+    <link rel="stylesheet" href="./style/index.css" >
+    <link rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <header class="header">
+
+    <section class="banner"></section>
+    <section class="base base-service"></section>
+    <section class="base base-project"></section>
+    <section class="base base-intro"></section>
+    <section class="base base-build"></section>
+    <footer class="footer"></footer>
+    <aside class="aside"></aside>
+
+
+
+
+
+    </header>
+
+
+
+   
+
+
 </head>
 <body>
     l;kajfdskfa;lkdf;lkajd
